clusters/talos-ottawa/apps/media/app/transmission-music/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission-music
  namespace: media
  annotations:
    item.homer.rajsingh.info/name: "Transmission Music"
    item.homer.rajsingh.info/subtitle: "Music Downloader"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/transmission.svg"
    item.homer.rajsingh.info/tag: "media"
    item.homer.rajsingh.info/keywords: "torrent, music, download"

    service.homer.rajsingh.info/name: "Media"
    service.homer.rajsingh.info/icon: "fas fa-tv"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "transmission-music.rajsingh.info"
    - "transmission-music.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: transmission-music
          port: 9091
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
